# WhisperIntro

./: .gitignore  main.ipynb  pyproject.toml  requirements.txt
